    TODO: Add description in manual + OpenAPI
    TODO: Test
CR: Storage: Optimization of the cleanup
    To reduce the execution time of the requests, the cleanup is only carried
    out every minute. Parallel cleanup due to parallel requests cannot be
    excluded, but this should not be a problem.
    TODO: Add description in manual
    TODO: Test
CR: Service: Review of revision management
    - Added option XMEX_STORAGE_REVISION_TYPE
      Defines what the revision which is used in the attributes ___rev and
      ___uid should be based on. With 'serial', an auto incremental integer is
      used. The default value is 'timestamp', which uses an alphanumeric
      timestamp.
      TODO: Add description in manual
      TODO: Test
    - Omission of the response header Connection-Unique
      The client can manage this better for itself. The created ___uid
      attribute of the elements are now based on the storage revision ___rev
      attribute.
      TODO: Update description in manual
    - Omission of the response header Storage-Effects
      TODO: Add description in manual
      TODO: Test
    - Switch to response header Storage-Revision with the number of changes
      schema: revision/number of changes, e.g. Storage-Revision: 123/45
      without changes Storage-Revision: 123/0
      TODO: Add description in manual
      TODO: Test
CR: Service: Review and optimization of CONNECT
    - Storage must be initialized mandatory with CONNECT before it can be used.
CR: Service: Review and optimization of OPTIONS
    - Omission of the response header Storage-Effects.
CR: Test: Review and optimization
    - Added option XMEX_DEBUG_MODE
      The activation of debug mode is primarily planned for unit tests and
      enforces the auto incremental revision type. In addition, the hashed
      headers for request, response and storage are added to the response,
      which can be checked by the unit tests.
      TODO: Add description in manual
      TODO: Test