@@ -34,6 +34,14 @@ CR: Storage: Optimization of the cleanup
     excluded, but this should not be a problem.
     TODO: Add description in manual
     TODO: Test
+CR: Storage: Review and optimization
+    - The name now allows word characters and minus, if the minus is not at the
+      beginning and not at the end.
+    - The storage now uses the name in plain text in the file system. The
+      original Base64 was intended to protect special characters and control
+      characters, but this is obsolete.
+    TODO: Add description in manual
+    TODO: Test
 CR: Service: Review of revision management
     - Added option XMEX_STORAGE_REVISION_TYPE
       Defines what the revision which is used in the attributes ___rev and
